# Sawasdee

./: .env  .gitignore  README.md  pyproject.toml
app/: app.py
src/sawadee/: Llama_api.py  SD3.py  __init__.py  agent.py  paligemma_api.py  whisper_api.py
src/sawadee.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sawadee/prompt/: summary.py
